# render

./: docker-compose.yaml  pyproject.toml
nginx/: Dockerfile  nginx.conf  site.conf
src/: Dockerfile  main.py  requirements.txt
src/templates/: index.html
