[tool.poetry]
name = "render"
version = "0.1.0"
description = ""
authors = ["T23 <petr777@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
